--- a/src/App.css
+++ b/src/App.css
@@ -11,39 +11,12 @@ html, body {
   flex-direction: column;
 }
 
-.nav {
-  background-color: wheat ;
-  color: black;
-  width: 100%;
-  height: 5%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid black;
-  font-weight: bold;
-}
-
-.nav1, .nav2 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  font-size: 1em;
-  padding: auto;
-}
 
 
-.hero {
-  flex: 1;
-  position: relative;
-}
 
 .hero-video video {
   width: 100%;
-  height: 80%;
+  height: 100%;
   object-fit: fill;
   position: absolute;
   z-index: 0;
@@ -126,19 +99,10 @@ html, body {
   align-items: center;
 }
 
-.div-card {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: rgb(63, 60, 60);
-  justify-content: space-evenly;
-  width: 100%;
-  align-items: center;
-}
-
 /* COMPONENTE CLASES --------------------------------------------*/
 
 .div-clases {
-  background-image: url("./img/wave.svg");
+  background-image: url("./assets/svgs/wave.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -160,7 +124,6 @@ html, body {
 }
 
 .card2 {
-  flex: 25%;
   background-color: #f9f9f9;
   padding: 10px;
   border-radius: 5px;
