--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,35 @@
-html, body {
+html,
+body {
   margin: 0;
-  font-family: Quicksand, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Quicksand, sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
+}
+:root {
+  --night: #0b090a;
+  --eerie-black: #161a1d;
+  --blood-red: #660708;
+  --cornell-red: #a4161a;
+  --cornell-red-2: #ba181b;
+  --imperial-red: #e5383b;
+  --silver: #b1a7a6;
+  --timberwolf: #d3d3d3;
+  --white-smoke: #f5f3f4;
+  --white: #ffffff;
 }
 
-.container {
-  background-color: white;
-  width: 100%;
-  height: 100vh;
+.prueba{
   display: flex;
-  flex-direction: column;
+  justify-content: left;
+  align-items: center;
 }
 
 
-
-
-.hero-video video {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: 0;
-}
-
-.absolute-div {
-  background: #f4f4f4;
-  opacity: 0.8;
-  padding: 10px;
-  border-radius: 16px;
-  position: absolute;
-  font-weight: 900;
-  top: 10%;
-  max-width: 400px;
-  z-index: 20; /* Asegura que el texto esté sobre el video */
-  color: black;
-  font-size: 24px;
-  left: 10%;
-}
-
-.absolute-h1{
-  text-align: justify;
-  opacity: 1;
-  
-}
-.absolute-p {
-  color:#c44949;
-  opacity: 1;
-}
-
-
-.boton{
+.boton {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   margin: 10px;
-  
 }
 .absolute-btn {
   padding: 10px 20px;
@@ -108,17 +82,22 @@ html, body {
 }
 
 .clases-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column; /* Mantiene el flujo en columna para los elementos principales */
+  justify-content: center;
+  align-items: center; /* Centra el contenido horizontalmente */
   width: 100%;
-  max-width: 800px;
-  margin: 0 auto; /* Centra el contenedor horizontalmente */
+  margin: 0 auto;
   text-align: center;
-  padding: 20px;
+
 }
 
 .cards-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: row; /* Asegura que las tarjetas estén en fila */
+  flex-wrap: wrap; /* Permite que las tarjetas se ajusten al ancho del contenedor */
+  justify-content: space-between; /* Distribuye espacio uniformemente entre las tarjetas */
   margin-top: 20px;
   gap: 30px;
 }
@@ -130,13 +109,13 @@ html, body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  flex-basis: calc(33% - 30px); /* Hace que cada tarjeta ocupe 33% del contenedor menos el gap */
 }
 
-.card2 img{
+.card2 img {
   width: 100%;
   height: 100%;
-  object-fit: fill
+  object-fit: fill;
 }
 
 .card-image2 {
@@ -174,12 +153,4 @@ html, body {
   font-weight: 600;
 }
 
-@media (max-width: 768px) {
-  .hero-video video {
-    display: none;
-  }
- 
-  .nav2 {
-    display: none;
-  }
-}
+
