--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html,
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: Quicksand, sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
     "Open Sans", "Helvetica Neue", sans-serif;
